Use JavaScript to align the top of the editor preview in order to take account of the different form elements before the editor window. Fixes #53.

--- a/src/wte/static/scss/application/_textbook.scss
+++ b/src/wte/static/scss/application/_textbook.scss
@@ -5,10 +5,6 @@
     overflow: auto;
     box-sizing: border-box;
     
-    &.part-editor {
-        margin-top: 10em;
-    }
-    
     iframe {
         border-width: 0;
     }
